--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 div, .calculator {
@@ -15,22 +14,17 @@ div, .calculator {
     flex-flow: row wrap;
 }
 
-.display, .numbers, .operators {
-    flex-shrink: 1;
-    flex-grow: 1;
-}
-
-/* .display {
-    height: 100px;
+.display {
     width: 400px;
+    height: 200px;
 }
 
 .numbers {
-    height: 300px;
-    width: 300px;
+    height: 296px;
+    width: 267px
 }
 
 .operators {
-    height: 300px;
-    width: 100px;
-} */
+    height: 296px;
+    flex-grow: 1;
+}
