--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,44 @@
 body {
     display: flex;
     justify-content: center;
-}
-
-div, .calculator {
-    border: 2px solid black
+    background-color: #bed3c3;
+    padding-top: 5%;
 }
 
 .calculator {
     display: flex;
+    border-radius: 5px;
     height: 500px;
     width: 400px;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
+    background-color: #4a919e;
+    gap: 10px;
+    padding: 10px;
 }
 
 .display {
-    width: 400px;
-    height: 200px;
-}
-
-.numbers {
-    height: 296px;
-    width: 267px
-}
-
-.operators {
-    height: 296px;
     flex-grow: 1;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: white;
+}
+
+.buttons {
+    display: flex;
+    flex-grow: 2;
+    flex-flow: column wrap;
+
+}
+
+.row {
+    display: flex;
+    flex-grow: 1;
+}
+
+button {
+    background-color: #ebaca2;
+    flex-grow: 1;
+    border: none;
+    font-size: 30px;
+    color: #ce6a6b;
 }
