--- a/styles.css
+++ b/styles.css
@@ -10,35 +10,63 @@ body {
     border-radius: 5px;
     height: 500px;
     width: 400px;
-    flex-flow: column wrap;
+    flex-wrap: wrap;
     background-color: #4a919e;
-    gap: 10px;
-    padding: 10px;
+    gap: 15px;
+    padding: 20px;
+    box-shadow: 10px 10px 10px gray;
 }
 
 .display {
+    display: flex;
     flex-grow: 1;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 5px;
     background-color: white;
+    color: #212e53;
+    font-size: 60px;
+    justify-content: flex-end;
+    align-items: center;
+    line-height: 0%;
+    /* overflow: auto; */
+    padding: 5px;
+}
+
+.buttons, button {
+    background-color: #ebaca2;
 }
 
 .buttons {
     display: flex;
     flex-grow: 2;
-    flex-flow: column wrap;
-
+    flex-wrap: wrap;
 }
 
-.row {
-    display: flex;
-    flex-grow: 1;
+button:hover {
+    background-color: #ce6a6b;
+    color: #ebaca2;
 }
 
 button {
-    background-color: #ebaca2;
-    flex-grow: 1;
     border: none;
     font-size: 30px;
     color: #ce6a6b;
+    width: 100px;
+    border-radius: 5px;
+    transition-duration: 0.3s;
+}
+
+#buttonClear, .buttons {
+    border-bottom-left-radius: 5px;
+}
+
+#buttonDiv, .buttons {
+    border-bottom-right-radius: 5px;
+}
+
+#buttonOne, .buttons {
+    border-top-left-radius: 5px;
+}
+
+#buttonAdd, .buttons {
+    border-top-right-radius: 5px;
 }
